--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "winston": "^3.7.2"
   },
   "engines": {
     "node": "16.x"
