--- a/models/app-store.json
+++ b/models/app-store.json
@@ -4,7 +4,7 @@
     "version": "0.2",
     "creators": [
       {
-        "name": "Rosanne Birney",
+        "name": "Mary lyng",
         "role": "Web Developer"
       },
       {
