😺🏭 Checkpoint ./models/app-store.json:633981/10

--- a/models/app-store.json
+++ b/models/app-store.json
@@ -1,10 +1,10 @@
 {
   "info": {
     "appTitle": "Playlist Maker",
-    "version": "0.2",
+    "version": 0.2,
     "creators": [
       {
-        "name": "Mary Ryan",
+        "name": "Mary Lyng",
         "role": "Web Developer"
       },
       {
