👘🌈 Checkpoint ./models/app-store.json:633981/27

--- a/models/app-store.json
+++ b/models/app-store.json
@@ -4,7 +4,7 @@
     "version": 0.2,
     "creators": [
       {
-        "name": "Mary Lyng",
+        "name": "Rosanne Birney",
         "role": "Web Developer"
       },
       {
@@ -15,3 +15,6 @@
     "location": "Waterford"
   } 
 }
+
+
+
