😹🌛 Checkpoint ./models/app-store.json:633981/40

--- a/models/app-store.json
+++ b/models/app-store.json
@@ -4,7 +4,7 @@
     "version": 0.2,
     "creators": [
       {
-        "name": "Rosanne Birney",
+        "name": "Mary Lyng",
         "role": "Web Developer"
       },
       {
@@ -12,7 +12,7 @@
         "role": "Web Developer"
       }
     ],
-    "location": "Waterford"
+    "location": "Kilkenny"
   } 
 }
 
