--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "winston": "^3.11.0",
+    "express": "^4.19.2",
+    "winston": "^3.13.0",
     "lowdb": "^7.0.1",
     "express-handlebars": "^7.1.2",
     "body-parser": "^1.20.2",
     "uuid": "^9.0.1",
-    "cookie-parser": "^1.4.6"
+    "cookie-parser": "^1.4.6",
+    "express-fileupload": "^1.5.0",
+    "cloudinary": "^2.1.0"
   },
   "engines": {
     "node": "16.x"
